--- a/mobilenet.html
+++ b/mobilenet.html
@@ -12,6 +12,17 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 <body>
+  <h1> CONTEXT</h1>
+  <p>  Latin is a classical language that originated in the Italian Peninsula around the 7th century BC. It went on to become the language of the Roman Empire and had a profound influence on the development of various modern languages, including Spanish, French, Italian, and Portuguese.
+
+        Latin is known for its complex system of declensions, which include nominative, genitive, dative, accusative, and vocative cases. These declensions are used to indicate the grammatical roles of nouns and pronouns in sentences.
+
+        Latin is also known for its rich literature, including works by authors such as Cicero, Virgil, and Ovid. It was widely used in fields like law, philosophy, and science during the Roman Empire.
+
+        Fun fact: Latin is still used today in the scientific community, especially in fields like biology and taxonomy, where it is used to name species and categorize organisms.
+
+        Feel free to ask questions about Latin, its origins, grammar, or any related topic!</p>
+  
   <div class="container mt-5">
     <!-- Place your code in the script tag below. You can also use an external .js file -->
     <script>
@@ -33,7 +44,7 @@
 
         Feel free to ask questions about Latin, its origins, grammar, or any related topic!
       `;
-
+   alert("La soluciòn esta cargando danos unos segundos ");
       // Load the model.
       qna.load().then(model => {
         // Find the answers
