--- a/mobilenet.html
+++ b/mobilenet.html
@@ -13,15 +13,18 @@
 </head>
 <body>
   <h1> CONTEXT</h1>
-  <p>  Latin is a classical language that originated in the Italian Peninsula around the 7th century BC. It went on to become the language of the Roman Empire and had a profound influence on the development of various modern languages, including Spanish, French, Italian, and Portuguese.
+  <p>  Latin is a classical language that originated in the Italian Peninsula around the 7th century BC. It went on to become the language of the Roman Empire and had a profound influence on the development of various modern languages, including Spanish, French, Italian, and Portuguese. Latin is known for its complex system of declensions, which include nominative, genitive, dative, accusative, and vocative cases. These declensions are used to indicate the grammatical roles of nouns and pronouns in sentences.
 
-        Latin is known for its complex system of declensions, which include nominative, genitive, dative, accusative, and vocative cases. These declensions are used to indicate the grammatical roles of nouns and pronouns in sentences.
+Latin has a rich history and a significant cultural impact. It was not only the language of the Roman Empire but also the language of scholarship, science, religion, and literature in Europe for many centuries. Latin was the language of the Catholic Church, and many scientific and philosophical texts were written in Latin during the Middle Ages. It played a crucial role in the development of various academic disciplines.
 
-        Latin is also known for its rich literature, including works by authors such as Cicero, Virgil, and Ovid. It was widely used in fields like law, philosophy, and science during the Roman Empire.
+Latin literature is renowned for its contributions to poetry, philosophy, and oratory. Prominent Latin authors include Cicero, Virgil, Ovid, Horace, Seneca, and Julius Caesar. Their works continue to be studied and admired for their linguistic and literary qualities.
 
-        Fun fact: Latin is still used today in the scientific community, especially in fields like biology and taxonomy, where it is used to name species and categorize organisms.
+In addition to its historical significance, Latin is still used today in various contexts. Latin phrases and expressions are commonly found in legal, medical, and scientific terminology. For example, "et cetera" (etc.), "ad hoc," "in vitro," and "per capita" are all Latin phrases used in English. Latin is also the official language of the Vatican City, and it is used in the names of plant and animal species in biological taxonomy.
 
-        Feel free to ask questions about Latin, its origins, grammar, or any related topic!</p>
+Latin is often taught in educational institutions worldwide, both as a classical language and for its role in understanding the development of modern languages. Latin enthusiasts and scholars continue to research and study the language, ensuring its enduring legacy.
+
+
+  </p>
   
   <div class="container mt-5">
     <!-- Place your code in the script tag below. You can also use an external .js file -->
@@ -34,15 +37,17 @@
       
       // Define el contexto como un párrafo con información sobre el latín.
       const context = `
-        Latin is a classical language that originated in the Italian Peninsula around the 7th century BC. It went on to become the language of the Roman Empire and had a profound influence on the development of various modern languages, including Spanish, French, Italian, and Portuguese.
+        Latin is a classical language that originated in the Italian Peninsula around the 7th century BC. It went on to become the language of the Roman Empire and had a profound influence on the development of various modern languages, including Spanish, French, Italian, and Portuguese. Latin is known for its complex system of declensions, which include nominative, genitive, dative, accusative, and vocative cases. These declensions are used to indicate the grammatical roles of nouns and pronouns in sentences.
 
-        Latin is known for its complex system of declensions, which include nominative, genitive, dative, accusative, and vocative cases. These declensions are used to indicate the grammatical roles of nouns and pronouns in sentences.
+Latin has a rich history and a significant cultural impact. It was not only the language of the Roman Empire but also the language of scholarship, science, religion, and literature in Europe for many centuries. Latin was the language of the Catholic Church, and many scientific and philosophical texts were written in Latin during the Middle Ages. It played a crucial role in the development of various academic disciplines.
 
-        Latin is also known for its rich literature, including works by authors such as Cicero, Virgil, and Ovid. It was widely used in fields like law, philosophy, and science during the Roman Empire.
+Latin literature is renowned for its contributions to poetry, philosophy, and oratory. Prominent Latin authors include Cicero, Virgil, Ovid, Horace, Seneca, and Julius Caesar. Their works continue to be studied and admired for their linguistic and literary qualities.
 
-        Fun fact: Latin is still used today in the scientific community, especially in fields like biology and taxonomy, where it is used to name species and categorize organisms.
+In addition to its historical significance, Latin is still used today in various contexts. Latin phrases and expressions are commonly found in legal, medical, and scientific terminology. For example, "et cetera" (etc.), "ad hoc," "in vitro," and "per capita" are all Latin phrases used in English. Latin is also the official language of the Vatican City, and it is used in the names of plant and animal species in biological taxonomy.
 
-        Feel free to ask questions about Latin, its origins, grammar, or any related topic!
+Latin is often taught in educational institutions worldwide, both as a classical language and for its role in understanding the development of modern languages. Latin enthusiasts and scholars continue to research and study the language, ensuring its enduring legacy.
+
+
       `;
    alert("La soluciòn esta cargando danos unos segundos ");
       // Load the model.
