--- a/mobilenet.html
+++ b/mobilenet.html
@@ -12,6 +12,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 <body>
+  <h1> EXPERIMENTO CON BERT </h1>
+  Estamos utilizando TensorFlow, una potente biblioteca de código abierto para aprendizaje automático, junto con el modelo BERT (Bidirectional Encoder Representations from Transformers), que es una red neuronal preentrenada diseñada para procesar y comprender lenguaje natural. Con esta combinación, podemos realizar tareas de procesamiento de lenguaje natural, como responder preguntas, generar texto y analizar el significado de oraciones y documentos.
+
+BERT se ha entrenado en una gran cantidad de datos de texto en varios idiomas, lo que le permite capturar patrones y relaciones en el lenguaje humano. Esto significa que puede comprender el contexto y la semántica detrás de las palabras en una oración, lo que lo convierte en una herramienta poderosa para tareas de procesamiento de lenguaje natural.
+
+Con TensorFlow y BERT, podemos construir aplicaciones y sistemas que interactúan con el lenguaje humano de una manera más sofisticada. Por ejemplo, podemos crear chatbots inteligentes, motores de búsqueda de texto avanzados, sistemas de recomendación de contenido y más. También podemos mejorar la comprensión de texto en aplicaciones como la traducción automática y la resumen de documentos.
+
+En resumen, esta combinación de TensorFlow y el modelo BERT nos permite trabajar con texto de una manera más inteligente y precisa, abriendo un mundo de posibilidades en el procesamiento de lenguaje natural y la inteligencia artificial.
   <h1> CONTEXT</h1>
   <p>  Latin is a classical language that originated in the Italian Peninsula around the 7th century BC. It went on to become the language of the Roman Empire and had a profound influence on the development of various modern languages, including Spanish, French, Italian, and Portuguese. Latin is known for its complex system of declensions, which include nominative, genitive, dative, accusative, and vocative cases. These declensions are used to indicate the grammatical roles of nouns and pronouns in sentences.
 
